<resources>
    <string name="nofavourites">No Favourites</string>
    <string name="search">search</string>
    <string name="modify">modify</string>
    <string name="new_message">Create new message</string>
    <string name="new_message_toolbar_title">New Message</string>
    <string name="sent_mail">Sent mails</string>
    <string name="received_mail">Received mails</string>
    <string name="cancel_mails">Cancel selected</string>
    <string name="sender">From</string>
    <string name="recipient">To</string>
    <string name="recipients">Recipients</string>
    <string name="date">Date</string>
    <string name="object_">Object:</string>
    <string name="object">Object</string>
    <string name="body_new">Reply:</string>
    <string name="body">Body:</string>
    <string name="filter">Filter</string>
    <string name="menu">Menu</string>
    <string name="edit">Edit</string>
    <string name="send">Send</string>
    <string name="see">See</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="from">From:</string>
    <string name="to">To: </string>
    <string name="password_">Password:</string>
    <string name="insert">Insert</string>
    <string name="set">Set:</string>
    <string name="cancel">Cancel:</string>
    <string name="cancel_">Cancel</string>
    <string name="Map">Map</string>
    <string name="on">On</string>
    <string name="wrote">wrote</string>
    <string name="me">Myself</string>
    <string name="error">Error</string>
    <string name="warning">Warning!</string>
    <string name="home">Home</string>
    <string name="Done">Done</string>
    <string name="publish">Publish</string>
    <string name="save">Save</string>
    <string name="location">Location</string>
    <string name="floor">Floor</string>
    <string name="confirm">Confirm</string>
    <string name="insert_description">Insert a description</string>
    <string name="operation_canceled">Operation canceled</string>
    <string name="ground_floor">Ground floor</string>
    <string name="basement_floor">Basement</string>
    <string name="study_title">Qualification:</string>
    <string name="mark_cum_laude">cum laude</string>
    <string-array name="cardinal_numbers">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>5th</item>
        <item>6th</item>
        <item>7th</item>
        <item>8th</item>
        <item>9th</item>
        <item>10th</item>
    </string-array>
    <string name="app_name">JobPlacement</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_icon_description">UserIcon</string>
    <string name="application_error">We are sorry. An application error occurred. Impossible to perform operation.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_home">Home</string>
    <string name="login_hint_email">Email address</string>
    <string name="login_hint_password">Password</string>
    <string name="login_remember">Remember</string>
    <string name="login_forgot">Forgot your password?</string>
    <string name="login_register">Register now!</string>
    <string name="login_password_reset">Reset password?</string>
    <string name="login_insert_mail">Insert your email</string>
    <string name="login_reset_cancel">Cancel</string>
    <string name="login_reset_send">Send</string>
    <string name="login_reset_message">We will send you an eMail for password reset</string>
    <string name="login_loggin_in">Logging in ...</string>
    <string name="login_successful">login successful</string>
    <string name="login_failed">invalid username or password</string>
    <string name="logout_want_logout">Do you want to logout?</string>
    <string name="logout_logging_out">Logging out...</string>
    <string name="logout_complete">Logout completed</string>
    <string name="login_missing_connection">Your network connection is missing. Unable to login</string>
    <string name="registration_title">RegistrationActivity</string>
    <string name="registration_select_type">Select a type</string>
    <string name="registration_type_student">Student</string>
    <string name="registration_type_company">Company</string>
    <string name="registration_register">Register!</string>
    <string name="registration_mail_already_used">The mail you are trying to use is already taken by another account</string>
    <string name="registration_mail_not_valid">The mail you are trying to use is not valid</string>
    <string name="registration_connection_not_available">Connection to sever is unavailable, try later</string>
    <string name="registration_mismatching_password">mismatching passwords</string>
    <string name="registration_missing_info">missing information</string>
    <string name="registration_registration_error">An error occurred during the registration procedure. Please, try later</string>
    <string name="registration_must_select_type">You must select a type of user to register</string>
    <string name="profile_title">ProfileManagement</string>
    <string name="profile_account_tab">Account</string>
    <string name="profile_basics_tab">Overview</string>
    <string name="profile_skills_tab">Skills</string>
    <string name="profile_registry_tab">Registry</string>
    <string name="profile_office_tab">Offices</string>
    <string name="profile_confirm_password">Confirm password:</string>
    <string name="profile_date_hint">Click to insert date</string>
    <string name="profile_person_fragment_name_title">Name:</string>
    <string name="profile_person_fragment_surname_title">Surname:</string>
    <string name="profile_person_fragment_sex_title">Sex:</string>
    <string name="profile_person_fragment_birth_title">Date of birth:</string>
    <string name="profile_person_fragment_birth_city_title">Birth city:</string>
    <string name="profile_person_fragment_email_title">Email address:</string>
    <string name="profile_student_fragment_description">Short description:</string>
    <string name="profile_student_fragment_address">Address:</string>
    <string name="profile_student_fragment_cap">Postal code:</string>
    <string name="profile_student_fragment_city">City:</string>
    <string name="profile_student_fragment_nation">Nation:</string>
    <string name="profile_student_fragment_phones">Phones:</string>
    <string name="profile_student_fragment_degrees">Degrees:</string>
    <string name="profile_student_fragment_languages">Languages:</string>
    <string name="profile_student_fragment_languages_title">Language:</string>
    <string name="profile_student_fragment_language_level">Level:</string>
    <string name="profile_student_cv">Curriculum vitae</string>
    <string name="profile_student_upload_cv">CV not uploaded</string>
    <string name="profile_student_cv_only_pdf">Only PDF files accepted</string>
    <string name="delete_course_confirm">Do you really want to delete this course?</string>
    <string name="add_course_confirm">Do you want to add this course?</string>
    <string name="dialog_confirm_title">Confirm your request</string>
    <string name="string_company_fragment_name_title">Company name:</string>
    <string name="string_company_fragment_vat">VAT Number:</string>
    <string name="string_company_fragment_foundation_date">Foundation date:</string>
    <string name="string_company_fragment_field">Field:</string>
    <string name="string_company_fragment_email">Email address:</string>
    <string name="string_company_fragment_description">Short description:</string>
    <string name="string_company_fragment_office_title">Offices:</string>
    <string name="string_company_fragment_address">Address:</string>
    <string name="string_company_fragment_cap">Postal code:</string>
    <string name="string_company_fragment_nation">Nation:</string>
    <string name="string_company_fragment_city">City:</string>
    <string name="string_company_fragment_office_type">Office type:</string>
    <string name="string_send_email">Do you want to send a message to </string>
    <string name="string_cannot_edit">ERROR: you are not supposed to modify this account</string>
    <string name="string_email_not_verified">Your email was not verified yet. Please click on the link we sent you</string>
    <string name="profile_object_delete_failure">Some error occurred while deleting the object. Try later</string>
    <string name="profile_number_format_exception">An invalid value was found: the related field will not be updated</string>
    <string name="string_degree_fragment_degree_type_title">Degree type:</string>
    <string name="string_degree_fragment_degree_field_title">Field of study:</string>
    <string name="string_degree_fragment_degree_mark_title">Mark:</string>
    <string name="string_degree_fragment_degree_loud_title">Laude:</string>
    <string name="string_degree_fragment_degree_date_title">Degree date:</string>
    <string name="string_degree_type_bachelor">Bachelor</string>
    <string name="string_degree_type_master">Master</string>
    <string name="string_degree_type_doctorate">Doctorate</string>
    <string name="string_degree_type_graduating">Graduating</string>
    <string name="string_degree_type_none">None</string>
    <string name="string_field_informatics">Informatics</string>
    <string name="string_field_mechanics">Mechanics</string>
    <string name="string_field_chemistry">Chemistry</string>
    <string name="string_field_energy">Energy</string>
    <string name="string_field_materials">Materials</string>
    <string name="string_certificate_fragment_area">Certificates:</string>
    <string name="string_certificate_fragment_name">Title:</string>
    <string name="string_certificate_fragment_mark">Mark:</string>
    <string name="string_certificate_fragment_date">Date:</string>
    <string name="string_certificate_fragment_description">Certificate description:</string>
    <string name="string_account_change_username">Change username</string>
    <string name="string_account_change_password">Change password</string>
    <string name="account_delete_title">Delete your profile</string>
    <string name="account_delete_help_improve">We are sorry you decided to delete your profile. Would you help us understand how to improve our app?</string>
    <string name="account_delete_why">Why are you deleting your account?</string>
    <string name="account_delete_hard_understand">I found hard to understand the app</string>
    <string name="account_delete_found_job">I just found a job</string>
    <string name="account_delete_not_enough_users">There are not enough users</string>
    <string name="account_delete_none_previous">None of the previous</string>
    <string name="account_delete_write_reason">write the reason</string>
    <string name="account_delete_hints">Do you have some hints?</string>
    <string name="account_delete_shy">Don\'t be shy!</string>
    <string name="course_title">Course name:</string>
    <string name="professor_name_title">Professor:</string>
    <string name="course_code_title">Code:</string>
    <string name="notice_insert_message">Insert message text:</string>
    <string name="notice_message_hint">Message</string>
    <string name="application_dialog_considering">Your application has been taken in consideration. We will contact you soon to request further information and eventually set an interview</string>
    <string name="application_dialog_accept">Your application has been accepted</string>
    <string name="application_dialog_refused">Your application has been refused</string>
</resources>