

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.example.giuliagigi.jobplacement.ProfileDeleteFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2" >

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="@color/ColorPrimary"
                android:text="@string/account_delete_title"
                android:id="@+id/textView2"
                android:padding="10dp"
                android:layout_gravity="center_horizontal|top" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/ColorPrimaryDark"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/account_delete_help_improve"
                android:id="@+id/textView3"
                android:padding="6dp"
                android:layout_gravity="center_horizontal|top" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="27sp"
                android:text="@string/account_delete_why"
                android:id="@+id/textView4"
                android:textColor="@color/ColorPrimary"
                android:padding="10dp"
                android:layout_gravity="left" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">


                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/ColorPrimary"
                    android:id="@+id/profileDelete_foundJob_checkBox"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/ColorPrimaryDark"
                    android:textSize="17sp"
                    android:text="@string/account_delete_found_job"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">


                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/ColorPrimary"
                    android:id="@+id/profileDelete_badApp_checkBox"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/ColorPrimaryDark"
                    android:textSize="17sp"
                    android:text="@string/account_delete_hard_understand"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">


                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/ColorPrimary"
                    android:id="@+id/profileDelete_fewUsers_checkBox"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/ColorPrimaryDark"
                    android:textSize="17sp"
                    android:text="@string/account_delete_not_enough_users"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">


                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/ColorPrimary"
                    android:id="@+id/profileDelete_other_checkBox"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/ColorPrimaryDark"
                    android:textSize="17sp"
                    android:text="@string/account_delete_none_previous"/>

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profileDelete_otherReason_text"
                android:hint="@string/account_delete_write_reason"
                android:layout_marginLeft="28dp"
                android:backgroundTint="@color/blue_semi_transparent"
                android:textCursorDrawable="@drawable/edit_cursor"
                android:textColor="@color/ColorPrimaryDark"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="27sp"
                android:textColor="@color/ColorPrimary"
                android:text="@string/account_delete_hints"
                android:id="@+id/textView5"
                android:padding="10dp"
                android:layout_gravity="left" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:backgroundTint="@color/blue_semi_transparent"
                android:textCursorDrawable="@drawable/edit_cursor"
                android:id="@+id/profileDelete_hints_text"
                android:hint="@string/account_delete_shy"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:text="@string/confirm"
                android:background="@drawable/button_background"
                android:textColor="@color/ColorPrimaryDark"
                android:id="@+id/profileDelete_confirmButton"
                android:textSize="20sp"/>

        </LinearLayout>



    </ScrollView>





