<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notice_insert_message"
        android:textSize="@dimen/editText_textSize_small"
        android:layout_margin="2dp"
        android:textColor="@color/ColorPrimary"
        />

    <EditText
        android:id="@+id/notice_dialog_message"
        android:layout_width="@dimen/professor_notice_editText_width"
        android:layout_height="@dimen/professor_notice_editText_height"
        android:hint="@string/notice_message_hint"
        android:textSize="@dimen/editText_textSize"
        android:textColor="@color/ColorPrimaryDark"/>

    <Button
        android:id="@+id/notice_dialog_confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="2dp"
        android:textColor="@color/ColorPrimaryDark"
        android:textSize="@dimen/editText_textSize_small"
        android:background="@drawable/button_background"
        android:text="@string/confirm"/>

</LinearLayout>