<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/respond_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_email"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/tabsColor">

        <ImageView
            android:id="@+id/sender_img"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_profile"
            android:layout_margin="7dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sender"
            android:textColor="@color/ColorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="7dp"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:id="@+id/sender_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="nome"
            android:textColor="@color/ColorPrimaryDark"
            android:textSize="16sp"
            android:layout_marginLeft="7dp"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipient"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/ColorPrimary"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="6dp"
        android:layout_gravity="center_vertical"
        />

    <Spinner
        android:id="@+id/recipients_list"
        android:textColor="@color/ColorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="6dp"
        android:background="#E0E0E0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/ColorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="77dp"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10 maggio ..."
            android:textColor="@color/ColorPrimaryDark"
            android:textSize="16sp"
            android:layout_marginLeft="7dp"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/ColorPrimary"
            android:text="@string/object_"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="77dp"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:id="@+id/object_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/ColorPrimaryDark"
            android:text="oggetto ..."
            android:textSize="16sp"
            android:layout_marginLeft="7dp"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/ColorPrimary"
        android:text="@string/body"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="6dp"/>

    <TextView
        android:id="@+id/body_tv"
        android:layout_width="wrap_content"
        android:textColor="@color/ColorPrimaryDark"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"
        android:textSize="16dp"
        android:text="gjjfdgkjshòafjksghkjòhggfdgs ....."/>

</LinearLayout>