<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.giuliagigi.jobplacement.MailBoxNewFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/recipient"
            />

        <TextView
            android:id="@+id/recipient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="10dp"
        card_view:cardMaxElevation="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        card_view:cardBackgroundColor="#ffffff">

        <TextView
            android:id="@+id/old_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/ColorPrimaryDark"
            />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        card_view:cardCornerRadius="10dp"
        card_view:cardMaxElevation="5dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        card_view:cardBackgroundColor="#ffffff">

        <EditText
            android:id="@+id/new_respond_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#000000"
            android:textSize="15sp"
            android:gravity="top"
            android:background="#00000000"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scrollbars="vertical"
            android:hint="@string/body"
            />

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/send_response_message_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/send"
        android:background="#2196F3"
        android:textColor="#FFFFFF"/>

</LinearLayout>
