<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="@dimen/course_item_row_height"
    android:background="@drawable/course_item_background"
    android:layout_marginRight="@dimen/course_item_row_margin"
    android:layout_marginLeft="@dimen/course_item_row_margin"
    android:layout_marginTop="@dimen/course_item_row_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".9"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/course_code_title"
                android:layout_width="fill_parent"
                android:textColor="@color/ColorPrimary"
                android:text="@string/course_code_title"
                android:textSize="@dimen/editText_textSize_small"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/course_code_textView"
                android:layout_width="fill_parent"
                android:textColor="@color/black_light_transparent"
                android:layout_marginLeft="20dp"
                android:text="code"
                android:textSize="@dimen/editText_textSize"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/course_name_title"
                android:layout_width="fill_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/ColorPrimary"
                android:text="@string/course_title"
                android:textSize="@dimen/editText_textSize_small"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/course_name_textView"
                android:layout_width="fill_parent"
                android:textColor="@color/black_light_transparent"
                android:text="name"
                android:layout_marginLeft="20dp"
                android:textSize="@dimen/editText_textSize"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="3dp">

            <LinearLayout
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/rounded_rectangle"
                android:padding="2dp">

                <Button
                    android:layout_gravity="end"
                    android:id="@+id/course_details_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_search"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/rounded_rectangle"
                android:padding="2dp">

                <Button
                    android:layout_gravity="end"
                    android:id="@+id/course_add_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/course_professor_title"
        android:layout_width="fill_parent"
        android:textColor="@color/ColorPrimary"
        android:layout_marginLeft="5dp"
        android:text="@string/professor_name_title"
        android:textSize="@dimen/editText_textSize_small"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/course_professor_textView"
        android:layout_width="fill_parent"
        android:textColor="@color/linkColor"
        android:text="professor"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="2dp"
        android:textSize="@dimen/editText_textSize"
        android:layout_height="wrap_content" />

</LinearLayout>